--- a/report/product_kardex_report_templates.xml
+++ b/report/product_kardex_report_templates.xml
@@ -2,25 +2,25 @@
 <odoo>
   <template id="incoming_products_kardex_report_document">
     <t t-set="docs" t-value="docs.with_context({'lang':user.partner_id.lang})"/>
-    <!-- inicio -->
     <t t-set="stock_kardex_line_sorted" t-value="docs.stock_kardex_line_ids.sorted(key=lambda a:(a.product_name))"/>
-    <!-- <t t-foreach="docs.stock_kardex_line_ids" t-as="o"> -->
     <t t-foreach="stock_kardex_line_sorted" t-as="o">
       <t t-call="web.basic_layout">
-        <!-- <t t-call="web.external_layout_standard"> -->
         <div class="page">
           <div class="row mt32 mb32">
             <table class="table table-condensed">
               <tr>
-                <strong>
-                  <td style="border:solid 1px;" colspan="10" width="500">
 
-                    <h1 style="text-align:center; font-size:70px;">PRODUCT</h1>
-                    <h1 style="text-align:center; font-size:70px;" t-if="o.product_conform">CONFORM</h1>
-                    <h1 style="text-align:center; font-size:70px;" t-else="">NO CONFORM</h1>
+                <td style="border:solid 1px;" colspan="10" width="500">
 
-                  </td>
-                </strong>
+                  <h1 style="text-align:center; font-size:70px;">PRODUCT</h1>
+                  <h1 style="text-align:center; font-size:70px;" t-if="o.product_conform">
+                    <strong>CONFORM</strong>
+                  </h1>
+                  <h1 style="text-align:center; font-size:70px;" t-else="">
+                    <strong>NO CONFORM</strong>
+                  </h1>
+
+                </td>
               </tr>
 
               <tr>
@@ -51,7 +51,6 @@
                 </td>
                 <td style="border:solid 1px; text-align: center; font-size:40px;" colspan="6" width="300">
                   <strong><span t-field="docs.date" t-field-options='{"format": "dd/MM/yyyy"}'/></strong>
-                  <!-- <h1 style="text-align:center; font-size:50px;"> <span t-esc="docs.date" t-field-options='{"format": "dd/MM/yyyy"}'/> </h1> -->
                 </td>
               </tr>
 
@@ -92,50 +91,37 @@
                   </h1>
                 </td>
               </tr>
-
               <tr>
-                <td style="border:solid 1px;" colspan="2" height="50" width="100"/>
-                <td style="border:solid 1px;" colspan="2" height="50" width="100"/>
-                <td style="border:solid 1px;" colspan="2" height="50" width="100"/>
-                <td style="border:solid 1px;" colspan="2" height="50" width="100"/>
-                <td style="border:solid 1px;" colspan="2" height="50" width="100"/>
+                <td style="border:solid 1px;" colspan="2" height="60" width="100"/>
+                <td style="border:solid 1px;" colspan="2" height="60" width="100"/>
+                <td style="border:solid 1px;" colspan="2" height="60" width="100"/>
+                <td style="border:solid 1px;" colspan="2" height="60" width="100"/>
+                <td style="border:solid 1px;" colspan="2" height="60" width="100"/>
               </tr>
               <tr>
-                <td style="border:solid 1px;" colspan="2" height="50" width="100"/>
-                <td style="border:solid 1px;" colspan="2" height="50" width="100"/>
-                <td style="border:solid 1px;" colspan="2" height="50" width="100"/>
-                <td style="border:solid 1px;" colspan="2" height="50" width="100"/>
-                <td style="border:solid 1px;" colspan="2" height="50" width="100"/>
+                <td style="border:solid 1px;" colspan="2" height="60" width="100"/>
+                <td style="border:solid 1px;" colspan="2" height="60" width="100"/>
+                <td style="border:solid 1px;" colspan="2" height="60" width="100"/>
+                <td style="border:solid 1px;" colspan="2" height="60" width="100"/>
+                <td style="border:solid 1px;" colspan="2" height="60" width="100"/>
               </tr>
               <tr>
-                <td style="border:solid 1px;" colspan="2" height="50" width="100"/>
-                <td style="border:solid 1px;" colspan="2" height="50" width="100"/>
-                <td style="border:solid 1px;" colspan="2" height="50" width="100"/>
-                <td style="border:solid 1px;" colspan="2" height="50" width="100"/>
-                <td style="border:solid 1px;" colspan="2" height="50" width="100"/>
+                <td style="border:solid 1px;" colspan="2" height="60" width="100"/>
+                <td style="border:solid 1px;" colspan="2" height="60" width="100"/>
+                <td style="border:solid 1px;" colspan="2" height="60" width="100"/>
+                <td style="border:solid 1px;" colspan="2" height="60" width="100"/>
+                <td style="border:solid 1px;" colspan="2" height="60" width="100"/>
               </tr>
-              <tr>
-                <td style="border:solid 1px;" colspan="2" height="50" width="100"/>
-                <td style="border:solid 1px;" colspan="2" height="50" width="100"/>
-                <td style="border:solid 1px;" colspan="2" height="50" width="100"/>
-                <td style="border:solid 1px;" colspan="2" height="50" width="100"/>
-                <td style="border:solid 1px;" colspan="2" height="50" width="100"/>
-              </tr>
-              <!-- <tr> <td style="border:solid 1px;" colspan="2" height="50" width="100"/> <td style="border:solid 1px;" colspan="2" height="50" width="100"/> <td style="border:solid 1px;" colspan="2" height="50" width="100"/> <td style="border:solid 1px;"
-              colspan="2" height="50" width="100"/> <td style="border:solid 1px;" colspan="2" height="50" width="100"/> </tr> -->
-
               <tr>
                 <td colspan="10" height="60" width="500"/>
               </tr>
 
               <tr>
                 <td style="text-align:center;" colspan="5" width="250">
-                  <img t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('EAN13', o.product_name, 600, 100)" style="width:300px;height:50px"/>
-                  <!-- <img t-att-src="'/report/barcode/QR/%s' % '450-00100-CAJ'"/> -->
+                  <img t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('Code128', o.product_name, 600, 100)" style="width:300px;height:50px"/>
                 </td>
                 <td style="text-align:center;" colspan="5" width="250">
-                  <img t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('EAN13', docs.lot, 600, 100)" style="width:300px;height:50px"/>
-                  <!-- <img t-att-src="'/report/barcode/QR/%s' % '450-00100-CAJ'"/> -->
+                  <img t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('Code128', docs.lot, 600, 100)" style="width:300px;height:50px"/>
                 </td>
               </tr>
 
@@ -147,7 +133,6 @@
         </div>
       </t>
     </t>
-    <!-- fin -->
   </template>
 
   <template id="incoming_products_kardex_report_template">
